backend/test/resources/invalid/north-g.18.4.graphml-1.lgf
@nodes
label	type	ref
0	0	51
1	0	50
2	0	49
3	0	48
4	0	47
5	0	46
6	12	357
7	10	0
8	10	0
9	20	1
10	0	45
11	0	44
12	0	43
13	20	1
14	0	42
15	20	2
16	20	3
17	20	2
18	10	0
19	0	41
20	0	40
21	0	39
22	0	38
23	0	37
24	0	36
25	0	35
26	0	34
27	0	33
28	0	32
29	0	31
30	0	30
31	0	29
32	0	28
33	0	27
34	0	26
35	0	25
36	0	24
37	0	23
38	0	22
39	0	21
40	0	20
41	0	19
42	0	18
43	0	17
44	0	16
45	0	15
46	0	14
47	0	13
48	0	12
49	0	11
50	0	10
51	0	9
52	0	8
53	0	7
54	0	6
55	0	5
56	0	4
57	0	3
58	0	2
59	0	1
60	0	0
@arcs
		label	condition
0	41	0	""
1	9	1	""
2	9	2	""
3	16	3	""
4	19	4	""
5	16	5	""
6	15	6	59
6	16	7	94
7	38	8	""
7	48	9	""
7	17	10	""
8	45	11	""
8	55	12	""
8	17	13	""
18	27	14	""
18	11	15	""
18	24	16	""
18	14	17	""
18	37	18	""
16	44	19	""
9	28	20	""
19	58	21	""
20	47	22	""
21	32	23	""
22	18	24	""
23	50	25	""
24	54	26	""
25	31	27	""
26	9	28	""
27	42	29	""
28	43	30	""
29	56	31	""
30	12	32	""
31	52	33	""
32	51	34	""
33	13	35	""
34	22	36	""
35	33	37	""
36	26	38	""
37	39	39	""
38	13	40	""
39	15	41	""
40	13	42	""
41	20	43	""
42	46	44	""
43	53	45	""
44	21	46	""
45	29	47	""
46	57	48	""
47	36	49	""
48	60	50	""
49	30	51	""
50	49	52	""
51	35	53	""
52	40	54	""
53	34	55	""
54	23	56	""
55	16	57	""
56	25	58	""
57	10	59	""
58	16	60	""
59	16	61	""
60	59	62	""
@attributes
target 15
recommended ""
